# mouse-behavior-analysis

./: .gitignore  METADATA_ROCHE.csv  README.md  generate_plots.py  main.py  pyproject.toml  requirements.txt  데이터 사용 출처.txt
.agents/: AGENTS.md
.claude/: launch.json
.streamlit/: config.toml
config/: __init__.py  csv.py  database.py  lme.py  plot.py
dashboard/: app.py  datasource.py  detail_helpers.py
dashboard/.streamlit/: config.toml
dashboard/components/: interactive_timeline.html
dashboard/pages/: 01_dashboard.py  02_experiments.py  03_mice.py  04_comparison.py  05_mouse_detail.py
dashboard/sample_data/: .gitkeep
db/: __init__.py  schema.py
outputs/: .gitkeep  effect_size.csv  mixed_model_summary.csv  trend_test.csv
scripts/: build_sample.py  run_demo.py
src/: constants.py
src/analysis/: comparison.py  mixed_model.py
src/data/: loader.py
src/features/: kinematics.py  morphology.py  spatial.py
src/scoring/: continuous_score.py
src/state/: representation.py
src/validation/: validate_model.py
static/: architecture_build.html  erd_build.html
static/screens/: .gitkeep
tests/: conftest.py  test_analysis.py  test_constants.py
