[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-behavior-analysis"
version = "0.1.0"
description = "DeepLabCut 포즈 데이터 기반 마우스 행동 분석 + Streamlit 대시보드"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "streamlit>=1.51",
    "plotly>=6.3",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=2.2",
    "scipy>=1.16",
    "scikit-learn>=1.7",
    "statsmodels>=0.14",
    "tabulate>=0.9",
    "psycopg2-binary>=2.9",
    "opencv-python>=4.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
umap = ["umap-learn>=0.5"]

# 분석 파이프라인 패키지(db, src)만 설치 대상.
# `pip install -e .` 하면 어디서든 from db.schema / from src.constants 가능
# (대시보드는 app.py 가 sys.path 를 잡아주므로 별도 설치 불필요).
[tool.setuptools]
packages = ["db", "src", "src.data", "src.features", "src.state",
            "src.scoring", "src.analysis", "src.validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
